--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/cli": "^7.15.7",
+    "@babel/core": "^7.15.8",
+    "@babel/plugin-transform-arrow-functions": "^7.14.5",
+    "@babel/plugin-transform-block-scoping": "^7.15.3",
+    "@babel/plugin-transform-strict-mode": "^7.14.5",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.2.7",
     "file-loader": "^5.1.0",
