--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@babel/plugin-transform-arrow-functions": "^7.14.5",
     "@babel/plugin-transform-block-scoping": "^7.15.3",
     "@babel/plugin-transform-strict-mode": "^7.14.5",
+    "@babel/preset-env": "^7.15.8",
+    "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.2.7",
     "file-loader": "^5.1.0",
@@ -24,5 +26,8 @@
     "url-loader": "^3.0.0",
     "webpack": "^4.46.0",
     "webpack-cli": "^4.9.0"
+  },
+  "dependencies": {
+    "core-js": "^2.6.12"
   }
 }
