--- a/package.json
+++ b/package.json
@@ -19,8 +19,12 @@
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.2.7",
+    "eslint": "^8.1.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "file-loader": "^5.1.0",
     "html-webpack-plugin": "^4.5.2",
+    "husky": "^7.0.4",
+    "lint-staged": "^11.2.4",
     "mini-css-extract-plugin": "^1.6.2",
     "style-loader": "^2.0.0",
     "url-loader": "^3.0.0",
@@ -28,6 +32,16 @@
     "webpack-cli": "^4.9.0"
   },
   "dependencies": {
-    "core-js": "^2.6.12"
+    "core-js": "^2.6.12",
+    "eslint-config-prettier": "^8.3.0",
+    "prettier": "^2.4.1"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.js": "eslint --fix"
   }
 }
